Revision history for Gimp-Perl extension.

1.055 Mon Feb 22 22:38:44 CET 1999
	- applied seth's script changes.
        - gimp11ified some plug-ins.
        - removed debugging code in Gimp/Lib.xs.
        - got rid of a perl5.004 warning.
        - removed gimp_{main,init,end}.

1.054 Mon Feb 22 15:23:41 CET 1999
	- scm2scm and scm2perl will now be installed in INST_SCRIPT
        - fixed a bug in interact/PF_FONT.
        - made save_image more 1.1 compatible and automatically index
          when saving to gif.
        - many, Many, MANY 5.004 compatibility fixes.

1.053 Mon Feb 15 01:35:04 CET 1999
	- more errornous argument types are detected now, without
          just calling abort().
        - fixed a MAJOR namespace-leak: for example, if one used
          gimp_parasite_list once, Gimp::Image->parasite_list would call
          gimp_parasite_list and NOT gimp_image_parasite_list, as would be
          correct.
        - Gimp::Net now works correctly with parasites.
        - added examples/parasite_editor
        - added gimp_ prefix to Parasite-class
        - use $Config{perlpath} for bangpath, not $PERL

1.052 Tue Feb  9 18:16:15 CET 1999
	- moved the xlfd_size function from Gimp::Fu into Gimp
          (and maybe later into Gimp::Util?)
	- functions in Gimp::Util are now treated in the same way
          as PDB functions (when the module is loaded)
        - improved handling of "make clean" to make it less perl-ish
          and more gnu-ish
        - enabled full testsuite (keep your fingers crossed)
	- PDL examples no longer cause errors at startup
        - more compatibility fixes for 5.005_54
        - bangpaths are now replaced by $PERL at configuration time
        - fixed a few quirks in scm2scm and added it to the package

1.051 Tue Jan 19 21:10:20 CET 1999
	- corrected a minor typoe found by Stefan Traby <stefan@sime.com>
        - added SPIRAL* constants for gimp_blend
        - moved constants from Gimp.xs and extradefs.h to Gimp.pm, where